[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/UI/HUD/spr_ui_notif_box.png" type="Texture" id=1]
[ext_resource path="res://scripts/UI/HUD/HUD_Notif_text_box.gd" type="Script" id=2]
[ext_resource path="res://fonts/5x7_font.tres" type="BitmapFont" id=3]
[ext_resource path="res://shaders/entity/Flash_Shader_Simple.tres" type="Material" id=4]
[ext_resource path="res://sprites/Universal/$White.png" type="Texture" id=5]
[ext_resource path="res://sprites/UI/HUD/spr_ui_subtank_small.png" type="Texture" id=6]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Box_Notif" type="Control"]
pause_mode = 2
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 2 )

[node name="TextureRect" type="NinePatchRect" parent="."]
use_parent_material = true
margin_left = -10.0
margin_top = -6.0
margin_right = 10.0
margin_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 0 )
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Label" type="Label" parent="."]
modulate = Color( 0.913725, 0.65098, 0.384314, 1 )
material = SubResource( 2 )
use_parent_material = true
margin_left = -1.0
margin_top = -4.0
margin_right = 1.0
margin_bottom = 3.0
grow_horizontal = 2
custom_constants/line_spacing = 2
custom_fonts/font = ExtResource( 3 )
align = 1
uppercase = true

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 0.839216, 0.678431, 1 )
material = SubResource( 2 )
use_parent_material = true
margin_left = -19.0
margin_top = 1.0
margin_right = 19.0
margin_bottom = 8.0
grow_horizontal = 2
custom_constants/line_spacing = 2
custom_fonts/font = ExtResource( 3 )
align = 1
uppercase = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="subtank_set" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="SprUiSubtankSmall" type="Sprite" parent="subtank_set"]
position = Vector2( 47, 0 )
texture = ExtResource( 6 )

[node name="ColorRect2" type="ColorRect" parent="subtank_set"]
margin_left = -55.0
margin_top = -8.0
margin_right = 35.0
margin_bottom = 7.0
color = Color( 0.913725, 0.65098, 0.384314, 1 )

[node name="ColorRect" type="ColorRect" parent="subtank_set/ColorRect2"]
margin_left = 1.0
margin_top = 1.0
margin_right = 89.0
margin_bottom = 14.0
color = Color( 0.4, 0.223529, 0.192157, 1 )

[node name="TextureProgress" type="TextureProgress" parent="subtank_set"]
modulate = Color( 0.913725, 0.65098, 0.384314, 1 )
margin_left = -53.0
margin_top = -6.0
margin_right = 33.0
margin_bottom = 5.0
max_value = 20.0
value = 10.0
texture_progress = ExtResource( 5 )
fill_mode = 1
nine_patch_stretch = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
